--- a/i.a.css
+++ b/i.a.css
@@ -40,6 +40,30 @@ html{
 overflow-x: hidden;
 }
 
+/* Menu Mobile */
+
+.mobile-menu-icon button{
+    background-color: var(--grayb);
+    border: none;
+    padding: 9px;
+    color: var(--white);
+    border-radius: 8px;
+  }
+  
+  .mobile-menu-icon i {
+    font-size: 30px;
+  }
+  
+  .mobile-menu-icon {
+    display: none;
+  }
+  
+  .mobile-menu {
+    display: none;
+  }
+  
+  /* Fim do Mobile Menu */
+
 
 /* INÍCIO DA ESTILIZAÇÃO DO NOSSO CABEÇALHO */
 header{
@@ -291,6 +315,10 @@ footer img {
 
 }
 
+.open {
+    display: flex;
+}
+
 
 
 /* FIM DA ESTILIZAÇÃO DO NOSSO RODAPÉ */
@@ -349,6 +377,35 @@ font-size: 1.5rem;
 
 .container-section2 img{
     width: 20rem;
+}
+
+
+#nav-bar {
+    display: none;
+}
+
+
+.mobile-menu-icon {
+    display: block;
+    cursor: pointer;
+}
+
+.mobile-menu ul {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    padding-bottom: 1rem;
+}
+
+.mobile-menu a {
+    color: white;
+    background-color: var(--grayb);
+    border-radius: 5px;
+    transition: 1s ease;
+}
+
+.mobile-menu a:hover {
+    background-color: var(--purples);
 }
 
 }
