--- a/home.css
+++ b/home.css
@@ -71,6 +71,30 @@ html {
 }
 
 
+/* Menu Mobile */
+
+.mobile-menu-icon button{
+    background-color: var(--grayb);
+    border: none;
+    padding: 9px;
+    color: var(--white);
+    border-radius: 8px;
+  }
+  
+  .mobile-menu-icon i {
+    font-size: 30px;
+  }
+  
+  .mobile-menu-icon {
+    display: none;
+  }
+  
+  .mobile-menu {
+    display: none;
+  }
+  
+  /* Fim do Mobile Menu */
+
 
 /* INÍCIO DA ESTILIZAÇÃO DO NOSSO CABEÇALHO */
 header{
@@ -418,8 +442,44 @@ footer img {
 /* FIM DA ESTILIZAÇÃO DO NOSSO RODAPÉ */
 
 
+@media (max-width: 430px) {
+ 
+    ul {
+      display: none;
 
-@media (max-width: 834px) {
+    }
+    
+    .mobile-menu-icon {
+      display: block;
+      cursor: pointer;
+    }
+  
+    .mobile-menu ul {
+      display: flex;
+      flex-direction: column;
+      text-align: center;
+      padding-bottom: 1rem;
+    }
+  
+    .mobile-menu a {
+        color: white;
+        background-color: var(--grayb);
+        border-radius: 5px;
+        transition: 1s ease;
+      }
+    
+      .mobile-menu a:hover {
+        background-color: var(--purples);
+      }
+  }
+
+
+
+
+  
+
+
+@media (max-width: 834px) and (max-width: 1200px){
 
 
     header {
@@ -443,33 +503,6 @@ footer img {
         /**/
     }
 
-    #nav-bar {
-        display: none;
-    }
-
-
-    .mobile-menu-icon {
-        display: block;
-        cursor: pointer;
-    }
-
-    .mobile-menu ul {
-        display: flex;
-        flex-direction: column;
-        text-align: center;
-        padding-bottom: 1rem;
-    }
-
-    .mobile-menu a {
-        color: white;
-        background-color: var(--grayb);
-        border-radius: 5px;
-        transition: 1s ease;
-    }
-
-    .mobile-menu a:hover {
-        background-color: var(--purples);
-    }
 
     .section1 {
         padding: 8rem;
