--- a/style.css
+++ b/style.css
@@ -1,23 +1,23 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 /* Fonte */
 
-:root{
-  --bluew: #91D7F2;
-  --cream: #F2F0EB;
-  --white: #F2F2F2;
-  --gray: #2F3240;
+:root {
+  --bluew: #91d7f2;
+  --cream: #f2f0eb;
+  --white: #f2f2f2;
+  --gray: #2f3240;
   --grayb: #1d1d1d;
-  --black: #0D0D0D;
+  --black: #0d0d0d;
   --purple: #987cff;
-  --purples: #643DF2;
-  --red: #F20519;
-  --yellow: #F2CB05;
-  --green: #55D976;
+  --purples: #643df2;
+  --red: #f20519;
+  --yellow: #f2cb05;
+  --green: #55d976;
   --greenb: #027313;
 }
 /* Paleta de cores */
 
-*{
+* {
   margin: 0;
   padding: 0;
   font-family: Poppins;
@@ -27,15 +27,15 @@
 }
 /* Resetando a página */
 
-html{
+html {
   width: 100%;
   height: 100vh;
-  font-size: 17.5px;  
+  font-size: 17.5px;
   overflow-x: hidden;
 }
 /* Usando 100% de cada área do site */
 
-body{
+body {
   background-color: var(--black);
   color: var(--white);
 }
@@ -61,7 +61,12 @@ body{
 
 /* Menu Mobile */
 
-.mobile-menu-icon button{
+#imageBar {
+  width: 50px;
+  display: none;
+}
+
+.mobile-menu-icon button {
   background-color: var(--grayb);
   border: none;
   padding: 9px;
@@ -83,7 +88,7 @@ body{
 
 /* Fim do Mobile Menu */
 
-.image-header img{
+.image-header img {
   width: 80px;
 }
 
@@ -95,8 +100,7 @@ body{
   /* Posicionamento */
 }
 
-
-.links a{
+.links a {
   color: var(--cream);
   /* Cores */
   text-decoration: none;
@@ -111,7 +115,7 @@ body{
   /* Texto */
 }
 
-.box-textanimation{
+.box-textanimation {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -121,7 +125,7 @@ body{
   margin-top: 1em;
 }
 
-h1{
+h1 {
   text-align: center;
   /* Alinhando texto ao centro */
 }
@@ -130,13 +134,12 @@ h1{
   display: none;
 }
 
-
 /* Aqui é a estilização do nosso header */
-header{
+header {
   display: flex; /* Deixamos os itens lado a lado*/
   justify-content: center; /*Justificamos os conteúdos*/
   align-items: center;
-  gap: 5rem; 
+  gap: 5rem;
   /* Posicionamento das caixas */
   background-image: url(imagens/GirlwallpaperHeader.png);
   background-position: center;
@@ -149,19 +152,19 @@ header{
   /* Bordas */
 }
 
-.whatsapp{
+.whatsapp {
   position: relative;
   z-index: 9999999;
 }
 
-.whatsapp img{
+.whatsapp img {
   width: 115px;
   /* Altura e Largura */
   position: fixed;
   bottom: 20px;
   right: 25px;
   /* Posicionamento do logo do WhatsApp */
-  transition: 00.50s ease;
+  transition: 00.5s ease;
   cursor: pointer;
 }
 
@@ -169,7 +172,7 @@ header{
   transform: scale(1.1);
 }
 
-.button button{
+.button button {
   width: 180px;
   height: 65px;
   /* Tamanho padrão dos botões */
@@ -183,27 +186,27 @@ header{
   position: relative;
   top: 225px;
   /* Posicionamento */
-  transition: 0.60s ease;
+  transition: 0.6s ease;
 }
 
-.button button:hover{
+.button button:hover {
   transform: scale(1.1);
   /* Aumentando escala do botão */
 }
 
-.button-purple button{
+.button-purple button {
   background-color: var(--purples);
   color: var(--white);
   /* Cores */
 }
 
-.button-green button{
+.button-green button {
   background-color: var(--greenb);
   color: var(--white);
   /* Cores */
 }
 
-.section01{
+.section01 {
   padding: 80px;
   /* Espaçamento */
   display: flex;
@@ -213,7 +216,7 @@ header{
   /* Posicionamento */
 }
 
-.text{
+.text {
   display: flex;
   justify-content: center;
   align-items: start;
@@ -224,18 +227,18 @@ header{
   /* Altura e Largura */
 }
 
-.text h2{
+.text h2 {
   color: var(--purples);
   /* Cores */
 }
 
-span{
+span {
   color: var(--green);
   /* Cores */
   font-weight: 500;
 }
 
-.content{
+.content {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -244,14 +247,14 @@ span{
   margin-top: 2em;
 }
 
-.content img{
+.content img {
   width: 270px;
   /* Largura e altura */
   border-radius: 15px;
   /* Bordas */
 }
 
-.section02{
+.section02 {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -260,14 +263,14 @@ span{
   /* Espaçamento */
 }
 
-.text-flex{
+.text-flex {
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 5rem;
 }
 
-.box-text{
+.box-text {
   width: 300px;
   height: 280px;
   /* Largura e Altura */
@@ -286,20 +289,20 @@ span{
   /* Sombra neon */
 }
 
-.box-text p{
+.box-text p {
   font-style: italic;
   font-weight: 300;
   /* Texto */
 }
 
-#color-text{
+#color-text {
   color: var(--green);
   /* Cores */
   font-weight: 500;
   /* Texto */
 }
 
-.section03{
+.section03 {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -309,62 +312,60 @@ span{
   /* Posicionamento */
 }
 
-.flex-s3{
+.flex-s3 {
   display: flex;
   justify-content: space-around;
   align-items: center;
   /* Posicionamento */
 }
 
-.texts3{
+.texts3 {
   width: 750px;
 }
 
-.image-s3 img{
+.image-s3 img {
   width: 450px;
 }
 
 footer {
-    padding: min(3vh, 3rem);
-    /*  Tamanho */
-    background-color: #F2F0EB;
-    /* Cor de fundo */
-    width: 100%;
-    /* Preencher 100% do tamanho */
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  padding: min(3vh, 3rem);
+  /*  Tamanho */
+  background-color: #f2f0eb;
+  /* Cor de fundo */
+  width: 100%;
+  /* Preencher 100% do tamanho */
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-footer i{
+footer i {
   margin-top: 5px;
-color: #0D0D0D;
-/* Cor do texto */
+  color: #0d0d0d;
+  /* Cor do texto */
 }
 
-footer i span{
+footer i span {
   margin-left: 5px;
-/* Espaçamento na esquerda */
+  /* Espaçamento na esquerda */
   font-weight: 800;
   /* Peso da fonte */
 }
 
-
-.container-footer{
-display: flex;
-/* Tornando flex (deixando os itens na vertical) */
-align-items: center;
-justify-content: center;
-gap: 50px;
-/*  Espaçamento entre os itens */
+.container-footer {
+  display: flex;
+  /* Tornando flex (deixando os itens na vertical) */
+  align-items: center;
+  justify-content: center;
+  gap: 50px;
+  /*  Espaçamento entre os itens */
 }
 
-.img{
-width: 10rem;
+.img {
+  width: 10rem;
 }
 
-
-.itens-footer1{
+.itens-footer1 {
   display: flex;
   /* Tornando Flex */
   flex-direction: column;
@@ -373,43 +374,42 @@ width: 10rem;
   align-items: center;
   /* Alinhando item a centro */
   font-size: 1.3rem;
-/* Tamanho do texto */
+  /* Tamanho do texto */
 }
 
-
-
-footer ul li{
-  color: #0D0D0D;
+footer ul li {
+  color: #0d0d0d;
   font-weight: 800;
   /* Peso da fonte */
   font-size: 1.2rem;
   /* Tamanho do texto */
 }
 
-footer ul li span{
-color: #643DF2;     
+footer ul li span {
+  color: #643df2;
 }
 
-      footer ul li:hover{
-          /* Hover para mudarmos algo ao passar o mouse por cima */
-          color: #643DF2; 
-          transition: 0.4s;  
-      }
+footer ul li:hover {
+  /* Hover para mudarmos algo ao passar o mouse por cima */
+  color: #643df2;
+  transition: 0.4s;
+}
 
+footer img {
+  width: 10rem;
+  height: auto;
+  display: flex;
+  /* Tornando Flex */
+  align-items: center;
+  /* Alinhando item a centro */
+  justify-content: center;
+  /*  Justificando o conteúdo */
+}
 
-      footer img{
-          width: 10rem;
-          height: auto;
-          display: flex;
-          /* Tornando Flex */
-          align-items: center;
-          /* Alinhando item a centro */
-          justify-content: center;
-     /*  Justificando o conteúdo */
-
-              }
-
-
+#imageLogo {
+  width: 80px;
+  display: none;
+}
 
 /* FIM DA ESTILIZAÇÃO DO NOSSO RODAPÉ */
 
@@ -419,19 +419,20 @@ color: #643DF2;
 
 /* Mobile */
 
-
-
 /* FIM DA ESTILIZAÇÃO DO NOSSO RODAPÉ */
 
 @media (max-width: 765px) {
-
   .whatsapp img {
     width: 100px;
-    transition: 00.50s ease;
+    transition: 00.5s ease;
   }
 
   .whatsapp img:hover {
     transform: scale(1.1);
+  }
+
+  #imageBar {
+    display: flex;
   }
 
   .div {
@@ -447,7 +448,7 @@ color: #643DF2;
     align-items: center;
     padding: 0px;
   }
-  
+
   .header-mobile img {
     width: 100%;
   }
@@ -459,11 +460,11 @@ color: #643DF2;
   header button {
     display: none;
   }
- 
+
   .links {
     display: none;
   }
-  
+
   .mobile-menu-icon {
     display: block;
     cursor: pointer;
@@ -508,7 +509,7 @@ color: #643DF2;
   }
 
   .content {
-     display: flex;
+    display: flex;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
@@ -527,7 +528,7 @@ color: #643DF2;
     flex-direction: column;
     width: 100%;
   }
-  
+
   .flex-s3 {
     display: flex;
     justify-content: center;
@@ -541,125 +542,135 @@ color: #643DF2;
   }
 
   .container-footer {
-   display: none;
+    display: none;
   }
 
   footer {
     text-align: center;
     border-radius: 25px;
   }
+
+  #imageLogo {
+    display: block;
+  }
 }
 
-  @media (min-width:765px) and (max-width: 1200px) {
-
-    .header-mobile {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-    
-    .header-mobile img {
-      width: 100%;
-    }
-  
-    header {
-      display: none;
-    }
-  
-    header button {
-      display: none;
-    }
-   
-    .links {
-      display: none;
-    }
-    
-    .mobile-menu-icon {
-      display: block;
-      cursor: pointer;
-    }
-  
-    .mobile-menu ul {
-      display: flex;
-      flex-direction: column;
-      text-align: center;
-      padding-bottom: 1rem;
-    }
-  
-    .mobile-menu a {
-      color: white;
-      background-color: var(--grayb);
-      border-radius: 5px;
-      transition: 1s ease;
-    }
-  
-    .mobile-menu a:hover {
-      background-color: var(--purples);
-    }
-  
-    .section01 {
-      padding: 10%;
-    }
-  
-    .text {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
-      width: 100%;
-      text-align: center;
-    }
-  
-    .text2 {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      width: 100%;
-    }
-  
-    .content {
-       display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-wrap: wrap;
-      flex-direction: column;
-      width: 100%;
-    }
-  
-    .text-flex {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-wrap: wrap;
-      width: 100%;
-    }
-
-    
-    .section03 {
-      display: flex;
-      justify-content: center;
-      align-content: center;
-      gap: 0;
-    }
-
-    .flex-s3 {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      width: 100%;
-      padding: 1px;
-    }
-  
-    .texts3 {
-      width: 100%;
-    }
-  
-    .container-footer {
-     display: none;
-    }
-  
-    footer {
-      text-align: center;
-      border-radius: 25px;
-    }
+@media (min-width: 765px) and (max-width: 1200px) {
+  .header-mobile {
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
+
+  #imageBar {
+    display: flex;
+  }
+
+  .header-mobile img {
+    width: 100%;
+  }
+
+  header {
+    display: none;
+  }
+
+  header button {
+    display: none;
+  }
+
+  .links {
+    display: none;
+  }
+
+  .mobile-menu-icon {
+    display: block;
+    cursor: pointer;
+  }
+
+  .mobile-menu ul {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    padding-bottom: 1rem;
+  }
+
+  .mobile-menu a {
+    color: white;
+    background-color: var(--grayb);
+    border-radius: 5px;
+    transition: 1s ease;
+  }
+
+  .mobile-menu a:hover {
+    background-color: var(--purples);
+  }
+
+  .section01 {
+    padding: 10%;
+  }
+
+  .text {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    text-align: center;
+  }
+
+  .text2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+  }
+
+  .content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    flex-direction: column;
+    width: 100%;
+  }
+
+  .text-flex {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 100%;
+  }
+
+  .section03 {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    gap: 0;
+  }
+
+  .flex-s3 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    padding: 1px;
+  }
+
+  .texts3 {
+    width: 100%;
+  }
+
+  .container-footer {
+    display: none;
+  }
+
+  footer {
+    text-align: center;
+    border-radius: 25px;
+  }
+
+  #imageLogo {
+    display: block;
+  }
+}
